[gd_scene load_steps=3 format=3 uid="uid://bwpheh7agwnlk"]

[ext_resource type="Script" uid="uid://b8y6jm3oxm4is" path="res://HUDs/Components/StylizedContainer.gd" id="1_iaoqe"]
[ext_resource type="Texture2D" uid="uid://em1agvjl7ifw" path="res://pixil-frame-0.png" id="1_lp0nr"]

[node name="StylizedContainer" type="MarginContainer"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.25
anchor_right = 0.6
anchor_bottom = 0.75
offset_left = -28.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iaoqe")

[node name="BorderOutside" type="ColorRect" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BGColor" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.592157, 0.364706, 0.219608, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BorderInside" type="ColorRect" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="BGColor" type="ColorRect" parent="MarginContainer/MarginContainer/MarginContainer"]
layout_mode = 2
color = Color(0.592157, 0.364706, 0.219608, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_lp0nr")
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10
texture = ExtResource("1_lp0nr")
stretch_mode = 4
flip_v = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_lp0nr")
stretch_mode = 4
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
texture = ExtResource("1_lp0nr")
stretch_mode = 4
flip_h = true
flip_v = true
